--- a/WebApplication2/Views/Shared/_Admin1Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Admin1Layout.cshtml
@@ -220,19 +220,19 @@
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                asp-action="course" asp-controller="admin" aria-expanded="false">
-                                <i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Courses</span>
+                                <i class="fas fa-book"></i><span class="hide-menu">Courses</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                asp-action="review" asp-controller="admin" aria-expanded="false">
-                                <i class="mdi mdi-account-network"></i><span class="hide-menu">Reviews</span>
+                                <i class="fas fa-comment-alt"></i><span class="hide-menu">Reviews</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                asp-action="report" asp-controller="admin" aria-expanded="false">
-                                <i class="mdi mdi-border-all"></i><span class="hide-menu">Reports</span>
+                                <i class="fas fa-file-alt"></i><span class="hide-menu">Reports</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
