--- a/WebApplication2/Views/Admin/Review.cshtml
+++ b/WebApplication2/Views/Admin/Review.cshtml
@@ -118,6 +118,7 @@
                                     <th scope="col">UserName</th>
                                     <th scope="col">Rating</th>
                                     <th scope="col">CourseName</th>
+                                    <th scope="col">Status</th>
                                     <th scope="col">Addition Date</th>
                                     <th scope="col">Actions</th>
                                 </tr>
@@ -160,24 +161,10 @@
                                             </ul>
                                         </td>
                                         <td>@review.Course.Title</td>
+                                        <td>@(review.Status ? "Accepted" : "Pending")</td>
                                         <td>@review.GetFormattedDate(review.RatingDate)</td>
                                         <td>
                                             <a href="@Url.Action("EditableDetails", "review", new { id = review.ReviewId })" class="btn btn-light btn-action">View</a>
-                                       @*      <div class="dropdown">
-                                                <button class="btn btn-link p-0"
-                                                        type="button"
-                                                        id="dropdownMenuButton1"
-                                                        data-bs-toggle="dropdown"
-                                                        aria-haspopup="true"
-                                                        aria-expanded="false">
-                                                    <i class="fa fa-ellipsis-v"></i>
-                                                </button>
-                                                <div class="dropdown-menu dropdown-menu-right"
-                                                     aria-labelledby="dropdownMenuButton1">
-                                                    <a class="dropdown-item" asp-controller="review" asp-action="editreview" asp-route-Id="@review.ReviewId">Update</a>
-                                                    <a class="dropdown-item" asp-controller="review" asp-action="delete" asp-route-Id="@review.ReviewId" onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
-                                                </div>
-                                            </div> *@
                                         </td>
                                     </tr>
                                 }
