--- a/WebApplication2/Views/Instructor/Index.cshtml
+++ b/WebApplication2/Views/Instructor/Index.cshtml
@@ -1,11 +1,14 @@
-﻿@inject LconsultDBContext _context
+﻿@model IndexViewModel
+
+
+@* @inject LconsultDBContext _context
 @{
     var courses = _context.Courses.OrderByDescending(c => c.AverageRating)
      .Take(10).ToList();
 
     var reviews = _context.Reviews.OrderByDescending(c => c.Rate)
             .Take(10).ToList();
-}
+} *@
 <partial name="_NotificationPartial"></partial>
 @{
     Layout = "_InstructorLayout";
@@ -268,7 +271,7 @@
                 *@                    <div class="carousel-container">
                     <button class="arrow prev">&#10094;</button>
                     <div class="carousel">
-                        @foreach (var course in courses)
+                        @foreach (var course in Model.Course)
                         {
                             <div class="course-card">
                                 @if (@course.Picture is null)
@@ -342,7 +345,7 @@
                 <div class="carousel-container3">
                     <button class="arrow3 prev3">&#10094;</button>
                     <div class="carousel3">
-                        @foreach (var review in reviews)
+                        @foreach (var review in Model.Review)
                         {
                             <div class="course-card3">
 
