--- a/WebApplication2/Views/Shared/_InstructorLayout.cshtml
+++ b/WebApplication2/Views/Shared/_InstructorLayout.cshtml
@@ -178,18 +178,20 @@
 
     </div>
 
-
-    <footer class="footer_area section_gap_top">
-        <div class="container">
+    <footer class="footer_area section_gap_top" style=" background-attachment: fixed;
+position:relative;
+background-color: #000 !important;
+margin-top:100px;
+    bottom: 0;
+    width: 100%;
+height:270px;
+    white-space: nowrap;
+    line-height: 60px;">
+        <div class="container" style="padding-top:30px; position:absolute;">
             <div class="row single-footer-widget">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="copy_right_text">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            All Copyrights &copy reserved
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
+                    <h2 style="font-weight: bold;color: #fff; word-break:break-word;">READY FOR YOUR <span style="color: red;">NEXT</span> LESSON?</h2>
+
                 </div>
                 <div class="col-md-4">
                     <div class="left-content">
@@ -201,10 +203,14 @@
                         </ul>
                     </div>
                 </div>
-            </div> 
+                <div class=" copy_right_text" style="text-align:center; margin:auto;">
+                    <p style="color: #fff;">
+                        All Copyrights &copy reserved
+                    </p>
+                </div>
+            </div>
         </div>
     </footer>
-
 
     <!-- Bootstrap core JavaScript -->
     @*     <script src="~/lib/jquery/dist/jquery.js"></script>
