--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -88,6 +88,43 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item w-99.9" style="margin-left:auto;" >
+                            <div class="search-form">
+                                <form method="get" asp-controller="Course" asp-action="Index1" class="d-flex w-100">
+                                    <div class="d-flex align-items-center w-100 p-2" style="border-radius: 25px;">
+                                            <li class="dropdown me-2">
+                                                <a class="nav-link dropdown-toggle" style="border: none; padding: 0; background: none;" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    <span id="selectedCategory">All</span> <span class="caret"></span>
+                                                </a>
+                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="width:210px !important; z-index:1000;">
+                                                    <li><a class="dropdown-item" href="#" onclick="selectCategory(0,'All')">All</a></li>
+                                                                    @foreach (var category in categories)
+                                                                    {
+
+                                                        <li style=""><a class="dropdown-item" onclick="selectCategory(@category.CategoryId,  '@category.CategoryName')">@category.CategoryName</a></li>
+                                                                    }
+
+                                                </ul>
+                                            </li>
+                                            <input type="hidden" id="categoryIdInput" name="CategoryId" value="0">
+                                            <div style="border-left: 1px solid #ccc; height: 30px; margin-right: 10px;"></div>
+                                            <input type="search" id="searchText" name="SearchQuery" class="form-control border-0 flex-grow-1" style="box-shadow: none;" placeholder="search">
+                                                            @*   <a role="button" class="nav-link" style="border: none; padding: 0; background: none; margin: 0 5px;" onclick="clearSearch()">
+                                                <span>&#x2716;</span>
+                                                </a> *@
+                                                                @* <button class="btn btn-outline-secondary" type="button"><i class="fa fa-search"></i></button> *@
+                                                <div style="border-left: 1px solid #ccc; height: 30px; margin: 0 10px;"></div>
+                                                <button type="submit" class="nav-link" style="border: none; padding: 0; background: none;">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.415l-3.85-3.85zm-5.648.196a5 5 0 1 1 7.071-7.07 5 5 0 0 1-7.07 7.07z" />
+                                                    </svg>
+                                                </button>
+                                            </div>
+                                            </form>
+                                        </div>
+
+
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="">
                                 Category
@@ -101,43 +138,7 @@
                         </li>
 
 
-                        <li class="nav-item w-95">
-                            <div class="search-form">
-                                <form method="get" asp-controller="Course" asp-action="Index1" class="d-flex w-100">
-                                    <div class="d-flex align-items-center w-100 p-2" style="border-radius: 25px;">
-                                        <li class="dropdown me-2">
-                                            <a class="nav-link dropdown-toggle" style="border: none; padding: 0; background: none;" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                                                <span id="selectedCategory">All</span> <span class="caret"></span>
-                                            </a>
-                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                                <li><a class="dropdown-item" href="#" onclick="selectCategory(0,'All')">All</a></li>
-                                                                @foreach(var category in categories)
-                                                                {
-
-                                                                      <li><a class="dropdown-item" onclick="selectCategory(@category.CategoryId,  '@category.CategoryName')">@category.CategoryName</a></li>
-                                                                }
-                                             
-                                            </ul>
-                                        </li>
-                                            <input type="hidden" id="categoryIdInput" name="CategoryId" value="0">
-                                            <div style="border-left: 1px solid #ccc; height: 30px; margin-right: 10px;"></div>
-                                            <input type="search" id="searchText" name="SearchQuery" class="form-control border-0 flex-grow-1" style="box-shadow: none;" placeholder="search">
-                                          @*   <a role="button" class="nav-link" style="border: none; padding: 0; background: none; margin: 0 5px;" onclick="clearSearch()">
-                                                <span>&#x2716;</span>
-                                            </a> *@
-                                            @* <button class="btn btn-outline-secondary" type="button"><i class="fa fa-search"></i></button> *@
-                                            <div style="border-left: 1px solid #ccc; height: 30px; margin: 0 10px;"></div>
-                                            <button type="submit" class="nav-link" style="border: none; padding: 0; background: none;">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.415l-3.85-3.85zm-5.648.196a5 5 0 1 1 7.071-7.07 5 5 0 0 1-7.07 7.07z" />
-                                                </svg>
-                                            </button>
-                                    </div>
-                                    </form>
-                                </div>
-
-            
-                          </li>
+                       
 
 
 
