--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -143,7 +143,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="home" asp-action="ForInstructor">
+                            <a class="nav-link" asp-controller="ACCOUNT" asp-action="REGISTER">
                                 For Instructors
                             </a>
                         </li>
