--- a/WebApplication2/Views/Account/ForInstructor.cshtml
+++ b/WebApplication2/Views/Account/ForInstructor.cshtml
@@ -61,11 +61,11 @@
 <div class="send-message" style="margin-top:-75px">
     <div class="container">
         <form enctype="multipart/form-data" asp-controller="account" id="addSocialAccounteDynamicForm" asp-action="register" method="post">
-            <div asp-validation-summary="All"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-heading">
-                        <h2>Sign Up</h2>
+                        <h2>Create account</h2>
                     </div>
                 </div>
 
@@ -76,29 +76,31 @@
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <fieldset>
                                     <labek >User Name</labek>
-                                    <input asp-for="@Model.UserName"  type="text" class="form-control" placeholder="User Name"  >
+                                    <input asp-for="@Model.UserName"   class="form-control" placeholder="User Name"  >
                                 </fieldset>
                             </div>
-                            
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <fieldset>
-                                    <labek >First Name</labek>
-                                    <input asp-for="@Model.FirstName"  type="text" class="form-control" placeholder="First Name"  >
+                                    <label>Last Name</label>
+                                    <input class="form-control" asp-for="@Model.LastName" placeholder="Last Name">
                                 </fieldset>
                             </div>
+                    
 
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <fieldset>
                                     <label>Email</label>
-                                    <input asp-for="@Model.Email" type="email" class="form-control" placeholder="Email"  >
+                                    <input asp-for="Email"  class="form-control" placeholder="Email"  >
                                 </fieldset>
+                                <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
 
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <fieldset>
-                                    <label>Password</label>
-                                    <input asp-for="@Model.Password" type="text" class="form-control" placeholder="Password"  >
+                                    <label>Confirm Passsword</label>
+                                    <input class="form-control" asp-for="@Model.ConfirmPassword" placeholder="Confirm Password">
                                 </fieldset>
+
                             </div>
 
 
@@ -143,8 +145,8 @@
 
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <label>Last Name</label>
-                                        <input class="form-control" asp-for="@Model.LastName" placeholder="Last Name">
+                                        <labek>First Name</labek>
+                                        <input asp-for="@Model.FirstName" type="text" class="form-control" placeholder="First Name">
                                     </fieldset>
                                 </div>
 
@@ -154,11 +156,11 @@
                                         <input class="form-control" id="course name" placeholder="Profession">
                                     </fieldset>
                                 </div>
-                                
+
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <label>Confirm Passsword</label>
-                                        <input class="form-control" asp-for="@Model.ConfirmPassword" placeholder="Confirm Password">
+                                        <label>Password</label>
+                                        <input asp-for="@Model.Password"  class="form-control" placeholder="Password">
                                     </fieldset>
                                 </div>
 
@@ -215,7 +217,7 @@
                         </div>
                         <div class="col-lg-12">
                             <fieldset>
-                                <button type="submit" id="contact" class="filled-button">Submit </button>
+                                <button type="submit" id="contact" class="filled-button mt-4">Submit </button>
                             </fieldset>
 
                         </div>
@@ -229,10 +231,12 @@
 </div>
 
 @section Scripts{
-    <script>
 
-        
 
-    </script>
+  <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" ></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+
+
 }
 
