--- a/WebApplication2/Views/Home/Login.cshtml
+++ b/WebApplication2/Views/Home/Login.cshtml
@@ -1,66 +1,4 @@
-﻿@* <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-
-    <title>Learn consult</title>
-
-
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-
-
-
-    <link href="~/css/site.css" rel="stylesheet">
-    <link href="~/css/site1.css" rel="stylesheet">
-    <link href="~/css/site2.css" rel="stylesheet">
-    <link href="~/css/site3.css" rel="stylesheet">
-    <link href="~/css/site4.css" rel="stylesheet">
-    <link href="~/css/StyleSheet.css" rel="stylesheet">
-
-
-
-
-</head>
-
-
-<body>
-
-    <!-- ***** Preloader Start ***** -->
-    <div id="preloader">
-        <div class="jumper">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
-    <!-- ***** Preloader End ***** -->
-    <!-- Header -->
-    <header class="">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-
-                <a class="navbar-brand" asp-action="index">
-                    <h2><em>L</em>earn Consult</h2>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="nav-item" id="navbarSupportedContent">
-                </div>
-            </div>
-
-        </nav>
-    </header>
- *@
-    <!-- Page Content -->
+﻿
 @{
     Layout = "_Layout";
 }
@@ -80,7 +18,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="mb-5">
-                                    <h2>Log in</h2>
+                                    <h2>Login</h2>
                                 </div>
                             </div>
                         </div>
@@ -88,20 +26,21 @@
                             <div class="row gy-3 overflow-hidden">
                                 <div class="col-12">
                                     <div class="form-floating mb-1">
-                                        <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
+                                        <input type="email" class="form-control" placeholder="name@example.com" >
                                         <label for="email" class="form-label">Email</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating mb-1">
-                                        <input type="password" class="form-control" name="password" id="password" value="" placeholder="Password" required>
+                                        <input type="password" class="form-control" placeholder="Password" >
                                         <label for="password" class="form-label">Password</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
 
-                                    <div class="d-flex  justify-content-md-start">
-                                        <button class=" btn btn-light">Forgot password</button>
+                                    <div class="d-flex">
+                                        <input type="checkbox" style="width:20px; height:25px; margin-right:3px;" >Remmber Me
+                                     
 
                                     </div>
                                 </div>
@@ -147,33 +86,14 @@
 
 
 
-@* 
-    <!-- END SEARCH RESULT -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-
-    <!-- Additional Scripts -->
-    <script src="~/js/site.js"></script>
-    <script src="~/js/site1.js"></script>
-    <script src="~/js/site2.js"></script>
-    <script src="~/js/site3.js"></script>
-    <script src="~/js/site4.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
- *@
+@section Scripts{
     <script>
         $('.btn').click(function () {
             $('.collapse-content').toggle();
         });
     </script>
 
+}
 
-@* </body>
 
-</html>
- *@
