--- a/WebApplication2/Views/Shared/_InstructorLayout.cshtml
+++ b/WebApplication2/Views/Shared/_InstructorLayout.cshtml
@@ -91,7 +91,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a asp-controller="Home" asp-action="Index" class="nav-link">Signout</a>
+                            <a asp-controller="account" asp-action="Logout" class="nav-link">Signout</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Instructor" asp-action="Profile">Profile</a>
