--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -148,11 +148,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-controller="home" asp-action="Login" class="nav-link">Login</a>
+                            <a asp-controller="account" asp-action="Login" class="nav-link">Login</a>
                         </li>
-                        <li class="nav-item">
-                            <a asp-controller="home" asp-action="SignUp" class="nav-link">Sign Up</a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
