--- a/WebApplication2/Views/Shared/_StudentLayout.cshtml
+++ b/WebApplication2/Views/Shared/_StudentLayout.cshtml
@@ -116,7 +116,7 @@
                         </li> *@
 
                         <li class="nav-item">
-                            <a asp-controller="Home" asp-action="Index" class="nav-link">Signout</a>
+                            <a asp-controller="account" asp-action="Logout" class="nav-link">Signout</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="student" asp-action="Profile">Profile</a>
